--- a/src/electric_toolbox/templates/navbar.html
+++ b/src/electric_toolbox/templates/navbar.html
@@ -1,13 +1,44 @@
-<div class="px-2 mx-auto bg-neutral-500 max-w-7xl sm:px-6 lg:px-8">
-  <div class="relative flex items-center justify-between h-16">
-    <div class="flex items-center justify-center flex-1 sm:items-stretch sm:justify-center">
-      <div class="hidden sm:ml-6 sm:block">
-        <div class="flex space-x-4">
-          <a href="/" class="px-3 py-2 text-sm font-medium text-white rounded-md hover:bg-gray-700 hover:text-blue-400">Home</a>
-          <a href="/posts" class="px-3 py-2 text-sm font-medium text-white rounded-md hover:bg-gray-700 hover:text-blue-400">Posts</a>
-          <a href="/about" class="px-3 py-2 text-sm font-medium text-white rounded-md hover:bg-gray-700 hover:text-blue-400">About</a>
-        </div>
-      </div>
-    </div>
+<div class="container flex flex-wrap items-center justify-between mx-auto">
+  <button data-collapse-toggle="navbar-default" type="button"
+    class="inline-flex items-center p-2 ml-3 text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
+    aria-controls="navbar-default" aria-expanded="false">
+    <span class="sr-only">Open main menu</span>
+    <svg class="w-6 h-6" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20"
+      xmlns="http://www.w3.org/2000/svg">
+      <path fill-rule="evenodd"
+        d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z"
+        clip-rule="evenodd"></path>
+    </svg>
+  </button>
+  <div class="hidden w-full md:block md:w-auto" id="navbar-default">
+    <ul
+      class="flex flex-col p-4 mt-4 md:flex-row md:space-x-8 md:mt-0 md:text-sm md:font-medium dark:border-gray-700">
+      <li>
+        <a href="/"
+          class="block py-2 pl-3 pr-4 text-white md:hover:text-blue-400 md:p-0 dark:text-gray-400 md:dark:hover:text-white">Home</a>
+      </li>
+      <li>
+        <a href="/posts"
+          class="block py-2 pl-3 pr-4 text-white md:hover:text-blue-400 md:p-0 dark:text-gray-400 md:dark:hover:text-white">Posts</a>
+      </li>
+      <li>
+        <a href="/about"
+          class="block py-2 pl-3 pr-4 text-white md:hover:text-blue-400 md:p-0 dark:text-gray-400 md:dark:hover:text-white">About</a>
+      </li>
+    </ul>
   </div>
+  <a href="/" class="text-xl font-bold text-white">Your Blog Name</a>
 </div>
+
+
+<script>
+  // Get the button and the menu
+  const btn = document.querySelector("[data-collapse-toggle='navbar-default']");
+  const menu = document.getElementById('navbar-default');
+
+  // Add an event listener to the button
+  btn.addEventListener('click', () => {
+    // Toggle the 'hidden' class on the menu
+    menu.classList.toggle('hidden');
+  });
+</script>
