--- a/src/electric_toolbox/templates/_base.html
+++ b/src/electric_toolbox/templates/_base.html
@@ -7,7 +7,7 @@
     <script src="https://unpkg.com/htmx.org@2.0.3" integrity="sha384-0895/pl2MU10Hqc6jd4RvrthNlDiE9U1tWmX7WRESftEDRosgxNsQG/Ze9YMRzHq" crossorigin="anonymous"></script>
 </head>
 <body class="font-sans antialiased text-white bg-neutral-900">
-    <nav>
+    <nav class="w-full px-4 py-4 bg-neutral-800">
         {% include 'navbar.html' %}
     </nav>
     <main>
