--- a/src/electric_toolbox/templates/_base.html
+++ b/src/electric_toolbox/templates/_base.html
@@ -1,21 +1,27 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ head.title }}</title>
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.14.7/dist/cdn.min.js"></script>
     <script src="https://unpkg.com/htmx.org@2.0.3" integrity="sha384-0895/pl2MU10Hqc6jd4RvrthNlDiE9U1tWmX7WRESftEDRosgxNsQG/Ze9YMRzHq" crossorigin="anonymous"></script>
+    {% block extra_head %}{% endblock %}
 </head>
 <body class="font-sans antialiased text-white bg-neutral-900">
-    <nav class="w-full px-4 py-4 bg-neutral-800">
-        {% include 'navbar.html' %}
-    </nav>
-    <main>
-        {{ content | safe }}
-        <button hx-get="/posts/hello_world.html" hx-target="#post-resp" hx-swap="innerHTML" class="btn-primary">Get Some HTML</button>
-        <div id="post-resp"></div>
+    <header class="relative z-50 w-full px-4 py-4 bg-neutral-800 md:w-3/4 md:mx-auto md:rounded-b-lg backdrop-blur-md">
+        <div class="container mx-auto">
+            {% include 'navbar/navbar.html' %}
+        </div>
+    </header>
+    <main class="container px-4 py-8 md:w-3/4 md:mx-auto">
+        <div class="w-full p-4 bg-opacity-50 rounded-lg shadow-[0_10px_30px_5px_rgba(0,0,0,0.3)] bg-neutral-800 backdrop-filter backdrop-blur-md">
+        {% block content %}
+            {# This is where page-specific content will go #}
+        {% endblock %}
+        </div>
     </main>
-    <footer>
+    <footer class="py-4 mt-8 text-center">
         {{ footer }}
     </footer>
 </body>
