--- a/src/electric_toolbox/templates/index/index.html
+++ b/src/electric_toolbox/templates/index/index.html
@@ -13,5 +13,31 @@
             Feel free to explore the site and reach out to me if you have
             any questions or just want to say hello!
         </p>
+
+        <p>
+            Feel free to explore the site and reach out to me if you have
+            any questions or just want to say hello!
+        </p>
+        <p>
+            Feel free to explore the site and reach out to me if you have
+            any questions or just want to say hello!
+        </p>
+        <p>
+            Feel free to explore the site and reach out to me if you have
+            any questions or just want to say hello!
+        </p>
+        <p>
+            Feel free to explore the site and reach out to me if you have
+            any questions or just want to say hello!
+        </p>
+        <p>
+            Feel free to explore the site and reach out to me if you have
+            any questions or just want to say hello!
+        </p>
+        <p>
+            Feel free to explore the site and reach out to me if you have
+            any questions or just want to say hello!
+        </p>
+
     </div>
 </section>
