feat: dev on html

--- a/src/electric_toolbox/templates/index.html
+++ b/src/electric_toolbox/templates/index.html
@@ -1,10 +1,14 @@
 {# templates/index.html #}
-{% extends "_base.html" %}
+{% extends "body.html" %}
 
 {% block content %}
-    <div class="container content-start px-4 py-8">
-        <div class="w-full my-auto">
-            {% include "index/index.html" %}
-        </div>
+  <div class="content-start px-4 py-8">
+    <div class="w-full my-auto">
+      {% include 'index/index.html' %}
     </div>
+  </div>
+
 {% endblock %}
+
+
+{% block extra_head %}{% endblock %}
