--- a/src/electric_toolbox/templates/_base.html
+++ b/src/electric_toolbox/templates/_base.html
@@ -1,22 +1,8 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <link rel="stylesheet" href="style.css">
-    <title>{{ head.title }}</title>
-    <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.14.7/dist/cdn.min.js"></script>
-    <script src="https://unpkg.com/htmx.org@2.0.3" integrity="sha384-0895/pl2MU10Hqc6jd4RvrthNlDiE9U1tWmX7WRESftEDRosgxNsQG/Ze9YMRzHq" crossorigin="anonymous"></script>
-</head>
-<body class="font-sans antialiased text-white bg-neutral-900">
-    <nav class="w-full px-4 py-4 bg-neutral-800">
-        {% include 'navbar.html' %}
-    </nav>
-    <main>
-        {{ content | safe }}
-        <button hx-get="/posts/hello_world.html" hx-target="#post-resp" hx-swap="innerHTML" class="btn-primary">Get Some HTML</button>
-        <div id="post-resp"></div>
-    </main>
-    <footer>
-        {{ footer }}
-    </footer>
-</body>
+<html lang="en" class="scroll-smooth">
+
+{% block head %}{% endblock %}
+
+{% block body %}{% endblock %}
+
 </html>
