feat: dev on posts

--- a/src/electric_toolbox/templates/blocks/header.html
+++ b/src/electric_toolbox/templates/blocks/header.html
@@ -2,7 +2,8 @@
     <div class="max-w-screen-lg mx-auto max-h-6">
         <div class="relative flex content-center justify-between mx-4 md:max-w-screen-xl">
             {% include 'navbar/title.html' %}
-            <div class="relative flex items-center justify-center ml-auto">
+            <div class="relative flex items-center justify-center ml-auto space-x-4">
+                {% include 'navbar/navigation.html' %}
                 {% include 'navbar/settings.html' %}
             </div>
         </div>
