--- a/src/electric_toolbox/templates/index.html
+++ b/src/electric_toolbox/templates/index.html
@@ -4,7 +4,7 @@
 {% block content %}
   <div class="content-start px-4 py-8">
     <div class="w-full my-auto">
-      {% include 'index/index.html' %}
+      {% include 'blocks/index.html' %}
     </div>
   </div>
 
