--- a/src/electric_toolbox/templates/navbar/_menus.html
+++ b/src/electric_toolbox/templates/navbar/_menus.html
@@ -1,11 +1,10 @@
-{# templates/navbar/desktop.html #}
 <ul class="flex flex-row items-center space-x-6 text-sm font-medium">
     <li>
-        <a href="/"
+        <a href="/index.html"
            class="block text-blue-400">Home</a>
     </li>
     <li>
-        <a href="/posts"
+        <a href="/posts.html"
            class="block text-neutral-300 hover:text-blue-400">Posts</a>
     </li>
     <li>
