feat: ok lets go

--- a/src/electric_toolbox/templates/blocks/posts/post/_post.html
+++ b/src/electric_toolbox/templates/blocks/posts/post/_post.html
@@ -5,6 +5,6 @@
     </h2>
 </button>
 
-<div class="blog-post">
+<article class="prose dark:prose-invert">
     {{ post.contents | safe }}
-</div>
+</article>
