--- a/src/electric_toolbox/templates/header/mobile.html
+++ b/src/electric_toolbox/templates/header/mobile.html
@@ -1,4 +1,4 @@
-{# templates/navbar/mobile.html #}
+{# templates/header/mobile.html #}
 <ul class="flex flex-col items-start px-4 pt-16 space-y-2">
   <li>
     <a href="/" class="block w-full px-3 py-2 text-white bg-blue-600 rounded-lg">Home</a>
