--- a/src/electric_toolbox/templates/body.html
+++ b/src/electric_toolbox/templates/body.html
@@ -2,17 +2,16 @@
 
 {% block head %}
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <base href="/">
     <link rel="stylesheet" href="style.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ head.title }}</title>
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.14.7/dist/cdn.min.js"></script>
     <script src="https://unpkg.com/htmx.org@2.0.3"
         integrity="sha384-0895/pl2MU10Hqc6jd4RvrthNlDiE9U1tWmX7WRESftEDRosgxNsQG/Ze9YMRzHq"
         crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" type="text/css">
     <script>
-        // On page load or when changing themes, add inline in `head` to avoid FOUC
         document.documentElement.classList.toggle(
             'dark',
             localStorage.theme === 'dark' || (!('theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)
@@ -31,16 +30,12 @@
     }" @scroll.window="scrolled = window.scrollY > 50"
     x-init="$watch('currentTheme', (val) => toggleTheme(currentTheme))"
 class="bg-outone text-outtext dark:bg-doutone dark:text-douttext">
-    {% include 'blocks/header.html' %}
+    {% include 'header/header.html' %}
 
-    <main class="px-4 py-4 mx-auto mt-6 sm:max-w-screen-lg">
-        <div
-            class="w-full p-4 bg-opacity-50 rounded-lg shadow-[0_10px_30px_5px_rgba(0,0,0,0.3)] bg-outp dark:bg-doutp backdrop-filter backdrop-blur-md"
-            id="body-content">
-            {% block content %}
+    <main id="body-content" class="w-full px-8 py-8 mx-auto my-auto mt-6 shadow-md md:rounded-md dark:bg-doutp sm:max-w-screen-lg backdrop-blur md:border-gray-200 dark:md:border-gray-700">
+        {% block content %}
             {# This is where page-specific content will go #}
-            {% endblock %}
-        </div>
+        {% endblock %}
     </main>
 
     <footer class="py-4 mt-8 text-center">
