--- a/src/electric_toolbox/templates/header/header.html
+++ b/src/electric_toolbox/templates/header/header.html
@@ -1,10 +1,10 @@
 <header id="header" class="sticky top-0 z-40 flex-none p-2 pb-4 mx-auto bg-outp/50 dark:bg-doutp/45 backdrop-blur">
     <div class="max-w-screen-lg mx-auto max-h-6">
         <div class="relative flex content-center justify-between mx-4 md:max-w-screen-xl">
-            {% include 'navbar/title.html' %}
+            {% include 'header/title.html' %}
             <div class="relative flex items-center justify-center ml-auto space-x-4">
-                {% include 'navbar/navigation.html' %}
-                {% include 'navbar/settings.html' %}
+                {% include 'header/navigation.html' %}
+                {% include 'header/settings.html' %}
             </div>
         </div>
     </div>
