--- a/src/electric_toolbox/templates/modals/settings.html
+++ b/src/electric_toolbox/templates/modals/settings.html
@@ -5,7 +5,7 @@
     <div :class="{ 'block': modalOpen, 'hidden': !modalOpen }" class="fixed inset-0 z-50 overflow-y-auto"
         aria-labelledby="modal-title" role="dialog" aria-modal="true" x-show="modalOpen" x-cloak>
 
-        <div class="flex items-center justify-center min-h-screen transform">
+        <div class="flex items-center justify-center min-h-screen transform ">
             <div @click="modalOpen = false; $dispatch('modal-settings-feedback', false)"
                 x-transition:enter="ease-out duration-300" x-transition:enter-start="opacity-0"
                 x-transition:enter-end="opacity-100" x-transition:leave="ease-in duration-200"
@@ -18,7 +18,7 @@
                 x-transition:leave="ease-in duration-200"
                 x-transition:leave-start="opacity-100 translate-y-0 sm:scale-100"
                 x-transition:leave-end="opacity-0 translate-y-4 sm:translate-y-0 sm:scale-95"
-                class="relative px-4 pt-5 pb-4 overflow-hidden text-left transition-all transform bg-white rounded-lg shadow-xl z-52 dark:bg-gray-900 sm:my-8 sm:max-w-lg sm:w-full sm:p-6"
+                class="relative px-4 pt-5 pb-4 overflow-hidden text-left transition-all transform bg-white rounded-lg shadow-xl bg-outs dark:bg-douts z-52 dark:bg-gray-900 sm:my-8 sm:max-w-lg sm:w-full sm:p-6"
                 @click.stop>
                 <div class="absolute top-0 right-0 pt-4 pr-4">
                     <button @click="modalOpen = false; $dispatch('modal-settings-feedback', false)" type="button"
@@ -36,7 +36,7 @@
                             Settings
                         </h3>
                         <div class="w-full mt-2 space-y-4">
-                            {% include 'navbar/_settings.html' %}
+                            {% include 'header/_settings.html' %}
                         </div>
                     </div>
                 </div>
