--- a/src/electric_toolbox/templates/body.html
+++ b/src/electric_toolbox/templates/body.html
@@ -18,6 +18,7 @@
         )
     </script>
     {% block extra_head %}{% endblock %}
+    {% block opengraph %}{% endblock %}
 </head>
 {% endblock %}
 
