--- a/src/electric_toolbox/templates/blocks/posts/one_card.html
+++ b/src/electric_toolbox/templates/blocks/posts/one_card.html
@@ -1,35 +1,73 @@
 {# templates/blocks/posts/post_item.html #}
-<li class="p-2">
-    <div class="flex flex-col rounded-lg bg-douts/10 dark:bg-douts/10 hover:bg-dout/20 dark:hover:bg-douts/20">
-        <button class="flex flex-row items-center text-left" hx-get="/posts/{{ post.slug }}/hx.html"
-            hx-push-url="/posts/{{ post.slug }}.html" hx-target="#body-content" hx-swap="innerHTML">
-            <div class="flex-grow p-4">
-                <h2 class="mb-2 text-xl font-bold">
-                    {{ post.front_matter.opengraph.title | safe }}
-                </h2>
-                <p class="mb-4 text-gray-700 dark:text-gray-300">
-                    {% if post.front_matter.summary and post.front_matter.summary.some %}
+<li>
+    <div
+        class="flex flex-col p-2 rounded-lg md:flex-row gap-x-2 bg-douts/10 dark:bg-douts/10 hover:bg-dout/20 dark:hover:bg-douts/20">
+
+        <div class="hidden h-40 mb-2 md:mb-0 md:mr-2 md:block md:flex-shrink-0 md:w-40">
+            {% if post.front_matter.thumbnail.is_some() %}
+            <img class="object-cover object-left-top w-full h-full rounded-md"
+                src="{{ post.front_matter.thumbnail.some }}" alt="">
+            {% else %}
+            <img class="object-cover object-left-top w-full h-full rounded-md"
+                src="https://images.unsplash.com/5/unsplash-kitsune-4.jpg?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHB सचिवाWQiOjEyMDd9&s=dd060fe209b4a56733a1dcc9b5aea53a"
+                alt="Placeholder Image">
+            {% endif %}
+        </div>
+        <div class="flex flex-col flex-grow">
+            <button class="flex flex-col items-start justify-between text-left text-wrap"
+                hx-get="/posts/{{ post.slug }}/hx.html" role="article"
+                aria-label="Read post: {{ post.front_matter.opengraph.title }}"
+                hx-push-url="/posts/{{ post.slug }}.html" hx-target="#body-content" hx-swap="innerHTML">
+                <h2 class="text-xl font-bold"><u>{{ post.front_matter.opengraph.title | safe }}</u></h2>
+                <span class="text-gray-700 dark:text-gray-300">
+                    {% if post.front_matter.summary.is_some() %}
                     {{ post.front_matter.summary.some | safe }}
                     {% else %}
                     {{ post.contents | truncate(200) | safe }}
                     {% endif %}
-                </p>
-                <div class="text-sm text-gray-500 dark:text-gray-400">
-
+                </span>
+            </button>
+            <div class="flex flex-col justify-between mt-2 sm:space-x-2 sm:items-center sm:flex-row">
+                <div class="flex flex-row items-center space-x-2">
+                    <button class="social-share-button" data-platform="bluesky" aria-label="Share on Bluesky">
+                        <i class="fa-brands fa-square-bluesky dark:invert"></i>
+                    </button>
+                    <button class="social-share-button" data-platform="linkedin" aria-label="Share on LinkedIn">
+                        <i class="fa fa-linkedin dark:invert"></i>
+                    </button>
+                    <button class="social-share-button" data-platform="reddit" aria-label="Share on Reddit">
+                        <i class="fa fa-reddit dark:invert"></i>
+                    </button>
+                    <button class="social-share-button" data-platform="hackernews" aria-label="Share via Email">
+                        <i class="fa-brands fa-square-hacker-news dark:invert"></i>
+                    </button>
+                    <button class="social-share-button" data-platform="email" aria-label="Share via Email">
+                        <i class="fa fa-envelope dark:invert"></i>
+                    </button>
                 </div>
-                {% if post.front_matter.opengraph.tags %}
-                <ul class="flex flex-wrap mt-2">
-                    {% for tag in post.front_matter.tags %}
-                    <li class="mb-1 mr-2">
-                        <a href="/tags/{{ tag }}"
-                            class="inline-block px-2 py-1 text-gray-700 bg-gray-200 rounded-full dark:bg-gray-700 dark:text-gray-300">
-                            {{ tag }}
-                        </a>
-                    </li>
-                    {% endfor %}
-                </ul>
-                {% endif %}
+                <div id="post-metadata" class="flex flex-row items-center space-x-1">
+                    <div class="flex-row items-center hidden space-x-1 sm:flex"><span
+                            class="material-symbols-outlined">calendar_add_on</span>
+                        <time class="text-sm text-gray-500 dark:text-gray-400"
+                            datetime="{{ post.front_matter.post_opengraph.publication_time }}">
+                            {{ post.front_matter.post_opengraph.publication_time[0:10] }}
+                        </time>
+                    </div>
+                    {% if post.front_matter.post_opengraph.publication_time[0:10] !=
+                    post.front_matter.post_opengraph.modified_time[0:11] %}
+                    <div class="flex flex-row items-center space-x-1">
+                        <span class="material-symbols-outlined">edit_calendar</span>
+                        <time class="text-sm text-gray-500 dark:text-gray-400"
+                            datetime="{{ post.front_matter.post_opengraph.publication_time }}">
+                            {{ post.front_matter.post_opengraph.modified_time[0:10] }}
+                        </time>
+                    </div>
+                    {% endif %}
+                </div>
             </div>
-        </button>
+        </div>
     </div>
+    <script>
+        setupShareButtons("https://{{ head.human_number }}/posts/{{ post.slug }}.html", "{{ post.front_matter.opengraph.title }}");
+    </script>
 </li>
