--- a/src/electric_toolbox/templates/body.html
+++ b/src/electric_toolbox/templates/body.html
@@ -7,10 +7,11 @@
     <link rel="stylesheet" href="style.css">
     <title>{{ head.title }}</title>
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.14.7/dist/cdn.min.js"></script>
-    <script src="https://unpkg.com/htmx.org@2.0.3"
+    <script defer src="https://unpkg.com/htmx.org@2.0.3"
         integrity="sha384-0895/pl2MU10Hqc6jd4RvrthNlDiE9U1tWmX7WRESftEDRosgxNsQG/Ze9YMRzHq"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" type="text/css">
+    <script src="https://kit.fontawesome.com/ce97e27a3f.js" crossorigin="anonymous"></script>
     <script>
         document.documentElement.classList.toggle(
             'dark',
