--- a/src/electric_toolbox/templates/body.html
+++ b/src/electric_toolbox/templates/body.html
@@ -50,6 +50,7 @@ class="bg-outone text-outtext dark:bg-doutone dark:text-douttext">
         </button>
     </footer>
     {% include 'components/settings/_modal.html' %}
+    {% include 'components/navigation/_modal.html' %}
 
     <script>
         function toggleTheme(theme) {
