--- a/src/electric_toolbox/templates/sections/blog/_article.html
+++ b/src/electric_toolbox/templates/sections/blog/_article.html
@@ -1,10 +1,6 @@
-<button class="px-4 py-2 font-bold text-white bg-blue-500 rounded hover:bg-blue-700" hx-get="/posts_hx.html"
-    hx-push-url="/posts.html" hx-target="#body-content" hx-swap="innerHTML">
-    <h2 class="post-title">
-        Go back
-    </h2>
-</button>
-{% include 'components/breadcrumbs/_partial.html' %}
+<h1 class="text-3xl font-bold">
+    {{ title }}
+</h1>
 <article class="prose dark:prose-invert">
     {{ contents | safe }}
 </article>
